--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "express": "^4.21.0",
     "method-override": "^3.0.0",
     "mongoose": "^8.6.2"
+  },
+  "devDependencies": {
+    "morgan": "^1.10.0"
   }
 }
